Checkpoint. Able to run unit tests outside of Eclipse